[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/DemoTileset.tres" type="TileSet" id=1]
[ext_resource path="res://images/light_blob.png" type="Texture" id=2]
[ext_resource path="res://game/LevelTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/sleeping_firkraag.png" type="Texture" id=4]
[ext_resource path="res://images/gore_pile.png" type="Texture" id=5]
[ext_resource path="res://images/decorative_maybe_fungi.png" type="Texture" id=6]
[ext_resource path="res://images/dragon_hoard.png" type="Texture" id=7]
[ext_resource path="res://game/actors/BossFightFirkraag.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/DomainOfTheDragon.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.9188, 32.6774 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 68.6912, 26.5874 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.7979, 9.31657 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1246.2, 867.434 )

[sub_resource type="CircleShape2D" id=5]
radius = 66.4071

[node name="DomainOfTheDragon" type="CanvasModulate"]
color = Color( 0.235294, 0.235294, 0.235294, 1 )
script = ExtResource( 9 )

[node name="Tilesets" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Tilesets"]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 1114128, 8, 0, 1114129, 8, 0, 1114130, 8, 0, 1114131, 8, 0, 1114132, 8, 0, 1114133, 8, 0, 1114134, 8, 0, 1179663, 8, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 8, 0, 1245199, 8, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 8, 0, 1310735, 8, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 8, 0, 1376271, 8, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 8, 0, 1441807, 8, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 8, 0, 1507344, 8, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 8, 0, 1572880, 8, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 8, 0, 1572888, 8, 0, 1572889, 8, 0, 1572890, 8, 0, 1572891, 8, 0, 1572892, 8, 0, 1572893, 8, 0, 1572894, 8, 0, 1572895, 8, 0, 1638417, 8, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 1638421, 0, 0, 1638422, 0, 0, 1638423, 8, 0, 1638424, 4, 0, 1638425, 4, 0, 1638426, 4, 0, 1638427, 4, 0, 1638428, 4, 0, 1638429, 4, 0, 1638430, 4, 0, 1638431, 4, 0, 1638432, 8, 0, 1638433, 8, 0, 1638434, 8, 0, 1638435, 8, 0, 1638436, 8, 0, 1638437, 8, 0, 1638438, 8, 0, 1703954, 8, 0, 1703955, 0, 0, 1703956, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 4, 0, 1703960, 4, 0, 1703961, 4, 0, 1703962, 4, 0, 1703963, 4, 0, 1703964, 4, 0, 1703965, 4, 0, 1703966, 4, 0, 1703967, 4, 0, 1703968, 4, 0, 1703969, 4, 0, 1703970, 4, 0, 1703971, 4, 0, 1703972, 4, 0, 1703973, 4, 0, 1703974, 4, 0, 1703975, 8, 0, 1703976, 8, 0, 1703977, 8, 0, 1769489, 8, 0, 1769490, 4, 0, 1769491, 4, 0, 1769492, 4, 0, 1769493, 4, 0, 1769494, 4, 0, 1769495, 4, 0, 1769496, 4, 0, 1769497, 4, 0, 1769498, 4, 0, 1769499, 4, 0, 1769500, 4, 0, 1769501, 4, 0, 1769502, 4, 0, 1769503, 4, 0, 1769504, 4, 0, 1769505, 4, 0, 1769506, 4, 0, 1769507, 4, 0, 1769508, 4, 0, 1769509, 4, 0, 1769510, 4, 0, 1769511, 4, 0, 1769512, 4, 0, 1769513, 4, 0, 1769514, 8, 0, 1769515, 8, 0, 1835024, 8, 0, 1835025, 4, 0, 1835026, 4, 0, 1835027, 4, 0, 1835028, 4, 0, 1835029, 4, 0, 1835030, 4, 0, 1835031, 4, 0, 1835032, 4, 0, 1835033, 4, 0, 1835034, 4, 0, 1835035, 4, 0, 1835036, 4, 0, 1835037, 4, 0, 1835038, 4, 0, 1835039, 4, 0, 1835040, 4, 0, 1835041, 4, 0, 1835042, 4, 0, 1835043, 4, 0, 1835044, 4, 0, 1835045, 4, 0, 1835046, 4, 0, 1835047, 4, 0, 1835048, 4, 0, 1835049, 4, 0, 1835050, 4, 0, 1835051, 4, 0, 1835052, 8, 0, 1900560, 8, 0, 1900561, 4, 0, 1900562, 4, 0, 1900563, 4, 0, 1900564, 4, 0, 1900565, 4, 0, 1900566, 4, 0, 1900567, 4, 0, 1900568, 4, 0, 1900569, 4, 0, 1900570, 4, 0, 1900571, 4, 0, 1900572, 4, 0, 1900573, 4, 0, 1900574, 4, 0, 1900575, 4, 0, 1900576, 4, 0, 1900577, 4, 0, 1900578, 4, 0, 1900579, 4, 0, 1900580, 4, 0, 1900581, 4, 0, 1900582, 4, 0, 1900583, 4, 0, 1900584, 4, 0, 1900585, 4, 0, 1900586, 4, 0, 1900587, 4, 0, 1900588, 4, 0, 1900589, 8, 0, 1966095, 8, 0, 1966096, 4, 0, 1966097, 4, 0, 1966098, 4, 0, 1966099, 4, 0, 1966100, 4, 0, 1966101, 4, 0, 1966102, 4, 0, 1966103, 4, 0, 1966104, 4, 0, 1966105, 4, 0, 1966106, 4, 0, 1966107, 4, 0, 1966108, 4, 0, 1966109, 4, 0, 1966110, 4, 0, 1966111, 4, 0, 1966112, 4, 0, 1966113, 4, 0, 1966114, 4, 0, 1966115, 4, 0, 1966116, 4, 0, 1966117, 4, 0, 1966118, 4, 0, 1966119, 4, 0, 1966120, 4, 0, 1966121, 4, 0, 1966122, 4, 0, 1966123, 4, 0, 1966124, 4, 0, 1966125, 8, 0, 2031631, 8, 0, 2031632, 4, 0, 2031633, 4, 0, 2031634, 4, 0, 2031635, 4, 0, 2031636, 4, 0, 2031637, 4, 0, 2031638, 4, 0, 2031639, 4, 0, 2031640, 4, 0, 2031641, 4, 0, 2031642, 4, 0, 2031643, 4, 0, 2031644, 4, 0, 2031645, 4, 0, 2031646, 4, 0, 2031647, 4, 0, 2031648, 4, 0, 2031649, 4, 0, 2031650, 4, 0, 2031651, 4, 0, 2031652, 4, 0, 2031653, 4, 0, 2031654, 4, 0, 2031655, 4, 0, 2031656, 4, 0, 2031657, 4, 0, 2031658, 4, 0, 2031659, 4, 0, 2031660, 4, 0, 2031661, 8, 0, 2097166, 8, 0, 2097167, 4, 0, 2097168, 4, 0, 2097169, 4, 0, 2097170, 4, 0, 2097171, 4, 0, 2097172, 4, 0, 2097173, 4, 0, 2097174, 4, 0, 2097175, 4, 0, 2097176, 4, 0, 2097177, 4, 0, 2097178, 4, 0, 2097179, 4, 0, 2097180, 4, 0, 2097181, 4, 0, 2097182, 4, 0, 2097183, 4, 0, 2097184, 4, 0, 2097185, 4, 0, 2097186, 4, 0, 2097187, 4, 0, 2097188, 4, 0, 2097189, 4, 0, 2097190, 4, 0, 2097191, 4, 0, 2097192, 4, 0, 2097193, 4, 0, 2097194, 4, 0, 2097195, 4, 0, 2097196, 4, 0, 2097197, 4, 0, 2097198, 8, 0, 2162702, 8, 0, 2162703, 4, 0, 2162704, 4, 0, 2162705, 4, 0, 2162706, 4, 0, 2162707, 4, 0, 2162708, 4, 0, 2162709, 4, 0, 2162710, 4, 0, 2162711, 4, 0, 2162712, 4, 0, 2162713, 4, 0, 2162714, 4, 0, 2162715, 4, 0, 2162716, 4, 0, 2162717, 4, 0, 2162718, 4, 0, 2162719, 4, 0, 2162720, 4, 0, 2162721, 4, 0, 2162722, 4, 0, 2162723, 4, 0, 2162724, 4, 0, 2162725, 4, 0, 2162726, 4, 0, 2162727, 4, 0, 2162728, 4, 0, 2162729, 4, 0, 2162730, 4, 0, 2162731, 4, 0, 2162732, 4, 0, 2162733, 4, 0, 2162734, 8, 0, 2228238, 8, 0, 2228239, 4, 0, 2228240, 4, 0, 2228241, 4, 0, 2228242, 4, 0, 2228243, 4, 0, 2228244, 4, 0, 2228245, 4, 0, 2228246, 4, 0, 2228247, 4, 0, 2228248, 4, 0, 2228249, 4, 0, 2228250, 4, 0, 2228251, 4, 0, 2228252, 4, 0, 2228253, 4, 0, 2228254, 4, 0, 2228255, 4, 0, 2228256, 4, 0, 2228257, 4, 0, 2228258, 4, 0, 2228259, 4, 0, 2228260, 4, 0, 2228261, 4, 0, 2228262, 4, 0, 2228263, 4, 0, 2228264, 4, 0, 2228265, 4, 0, 2228266, 4, 0, 2228267, 4, 0, 2228268, 4, 0, 2228269, 4, 0, 2228270, 8, 0, 2293774, 8, 0, 2293775, 4, 0, 2293776, 4, 0, 2293777, 4, 0, 2293778, 4, 0, 2293779, 4, 0, 2293780, 4, 0, 2293781, 4, 0, 2293782, 4, 0, 2293783, 4, 0, 2293784, 4, 0, 2293785, 4, 0, 2293786, 4, 0, 2293787, 4, 0, 2293788, 4, 0, 2293789, 4, 0, 2293790, 4, 0, 2293791, 4, 0, 2293792, 4, 0, 2293793, 4, 0, 2293794, 4, 0, 2293795, 4, 0, 2293796, 4, 0, 2293797, 4, 0, 2293798, 4, 0, 2293799, 4, 0, 2293800, 4, 0, 2293801, 4, 0, 2293802, 4, 0, 2293803, 4, 0, 2293804, 4, 0, 2293805, 4, 0, 2293806, 4, 0, 2293807, 8, 0, 2359310, 8, 0, 2359311, 4, 0, 2359312, 4, 0, 2359313, 4, 0, 2359314, 4, 0, 2359315, 4, 0, 2359316, 4, 0, 2359317, 4, 0, 2359318, 4, 0, 2359319, 4, 0, 2359320, 4, 0, 2359321, 4, 0, 2359322, 4, 0, 2359323, 4, 0, 2359324, 4, 0, 2359325, 4, 0, 2359326, 4, 0, 2359327, 4, 0, 2359328, 4, 0, 2359329, 4, 0, 2359330, 4, 0, 2359331, 4, 0, 2359332, 4, 0, 2359333, 4, 0, 2359334, 4, 0, 2359335, 4, 0, 2359336, 4, 0, 2359337, 4, 0, 2359338, 4, 0, 2359339, 4, 0, 2359340, 4, 0, 2359341, 4, 0, 2359342, 4, 0, 2359343, 8, 0, 2424846, 8, 0, 2424847, 4, 0, 2424848, 4, 0, 2424849, 4, 0, 2424850, 4, 0, 2424851, 4, 0, 2424852, 4, 0, 2424853, 4, 0, 2424854, 4, 0, 2424855, 4, 0, 2424856, 4, 0, 2424857, 4, 0, 2424858, 4, 0, 2424859, 4, 0, 2424860, 4, 0, 2424861, 4, 0, 2424862, 4, 0, 2424863, 4, 0, 2424864, 4, 0, 2424865, 4, 0, 2424866, 4, 0, 2424867, 4, 0, 2424868, 4, 0, 2424869, 4, 0, 2424870, 4, 0, 2424871, 4, 0, 2424872, 4, 0, 2424873, 4, 0, 2424874, 4, 0, 2424875, 4, 0, 2424876, 4, 0, 2424877, 4, 0, 2424878, 4, 0, 2424879, 8, 0, 2490381, 8, 0, 2490382, 8, 0, 2490383, 4, 0, 2490384, 4, 0, 2490385, 4, 0, 2490386, 4, 0, 2490387, 4, 0, 2490388, 4, 0, 2490389, 4, 0, 2490390, 4, 0, 2490391, 4, 0, 2490392, 4, 0, 2490393, 4, 0, 2490394, 4, 0, 2490395, 4, 0, 2490396, 4, 0, 2490397, 4, 0, 2490398, 4, 0, 2490399, 4, 0, 2490400, 4, 0, 2490401, 4, 0, 2490402, 4, 0, 2490403, 4, 0, 2490404, 4, 0, 2490405, 4, 0, 2490406, 4, 0, 2490407, 4, 0, 2490408, 4, 0, 2490409, 4, 0, 2490410, 4, 0, 2490411, 4, 0, 2490412, 4, 0, 2490413, 4, 0, 2490414, 4, 0, 2490415, 8, 0, 2555917, 8, 0, 2555918, 8, 0, 2555919, 4, 0, 2555920, 4, 0, 2555921, 4, 0, 2555922, 4, 0, 2555923, 4, 0, 2555924, 4, 0, 2555925, 4, 0, 2555926, 4, 0, 2555927, 4, 0, 2555928, 4, 0, 2555929, 4, 0, 2555930, 4, 0, 2555931, 4, 0, 2555932, 4, 0, 2555933, 4, 0, 2555934, 4, 0, 2555935, 4, 0, 2555936, 4, 0, 2555937, 4, 0, 2555938, 4, 0, 2555939, 4, 0, 2555940, 4, 0, 2555941, 4, 0, 2555942, 4, 0, 2555943, 4, 0, 2555944, 4, 0, 2555945, 4, 0, 2555946, 4, 0, 2555947, 4, 0, 2555948, 4, 0, 2555949, 4, 0, 2555950, 8, 0, 2621453, 8, 0, 2621454, 8, 0, 2621455, 4, 0, 2621456, 4, 0, 2621457, 4, 0, 2621458, 4, 0, 2621459, 4, 0, 2621460, 4, 0, 2621461, 4, 0, 2621462, 4, 0, 2621463, 4, 0, 2621464, 4, 0, 2621465, 4, 0, 2621466, 4, 0, 2621467, 4, 0, 2621468, 4, 0, 2621469, 4, 0, 2621470, 4, 0, 2621471, 4, 0, 2621472, 4, 0, 2621473, 4, 0, 2621474, 4, 0, 2621475, 4, 0, 2621476, 4, 0, 2621477, 4, 0, 2621478, 4, 0, 2621479, 4, 0, 2621480, 4, 0, 2621481, 4, 0, 2621482, 4, 0, 2621483, 4, 0, 2621484, 4, 0, 2621485, 4, 0, 2621486, 8, 0, 2686989, 8, 0, 2686990, 8, 0, 2686991, 4, 0, 2686992, 4, 0, 2686993, 4, 0, 2686994, 4, 0, 2686995, 4, 0, 2686996, 4, 0, 2686997, 4, 0, 2686998, 4, 0, 2686999, 4, 0, 2687000, 4, 0, 2687001, 4, 0, 2687002, 4, 0, 2687003, 4, 0, 2687004, 4, 0, 2687005, 4, 0, 2687006, 4, 0, 2687007, 4, 0, 2687008, 4, 0, 2687009, 4, 0, 2687010, 4, 0, 2687011, 4, 0, 2687012, 4, 0, 2687013, 4, 0, 2687014, 4, 0, 2687015, 4, 0, 2687016, 4, 0, 2687017, 4, 0, 2687018, 4, 0, 2687019, 4, 0, 2687020, 4, 0, 2687021, 4, 0, 2687022, 8, 0, 2752526, 8, 0, 2752527, 4, 0, 2752528, 4, 0, 2752529, 4, 0, 2752530, 4, 0, 2752531, 4, 0, 2752532, 4, 0, 2752533, 4, 0, 2752534, 4, 0, 2752535, 4, 0, 2752536, 4, 0, 2752537, 4, 0, 2752538, 4, 0, 2752539, 4, 0, 2752540, 4, 0, 2752541, 4, 0, 2752542, 4, 0, 2752543, 4, 0, 2752544, 4, 0, 2752545, 4, 0, 2752546, 4, 0, 2752547, 4, 0, 2752548, 4, 0, 2752549, 4, 0, 2752550, 4, 0, 2752551, 4, 0, 2752552, 4, 0, 2752553, 4, 0, 2752554, 4, 0, 2752555, 4, 0, 2752556, 4, 0, 2752557, 4, 0, 2752558, 8, 0, 2818062, 8, 0, 2818063, 8, 0, 2818064, 4, 0, 2818065, 4, 0, 2818066, 4, 0, 2818067, 4, 0, 2818068, 4, 0, 2818069, 4, 0, 2818070, 4, 0, 2818071, 4, 0, 2818072, 4, 0, 2818073, 4, 0, 2818074, 4, 0, 2818075, 4, 0, 2818076, 4, 0, 2818077, 4, 0, 2818078, 4, 0, 2818079, 4, 0, 2818080, 4, 0, 2818081, 4, 0, 2818082, 4, 0, 2818083, 4, 0, 2818084, 4, 0, 2818085, 4, 0, 2818086, 4, 0, 2818087, 4, 0, 2818088, 4, 0, 2818089, 4, 0, 2818090, 4, 0, 2818091, 4, 0, 2818092, 4, 0, 2818093, 8, 0, 2883599, 8, 0, 2883600, 8, 0, 2883601, 8, 0, 2883602, 4, 0, 2883603, 4, 0, 2883604, 4, 0, 2883605, 4, 0, 2883606, 4, 0, 2883607, 4, 0, 2883608, 4, 0, 2883609, 4, 0, 2883610, 4, 0, 2883611, 4, 0, 2883612, 4, 0, 2883613, 4, 0, 2883614, 4, 0, 2883615, 4, 0, 2883616, 4, 0, 2883617, 4, 0, 2883618, 4, 0, 2883619, 4, 0, 2883620, 4, 0, 2883621, 4, 0, 2883622, 4, 0, 2883623, 4, 0, 2883624, 4, 0, 2883625, 4, 0, 2883626, 4, 0, 2883627, 4, 0, 2883628, 8, 0, 2949137, 8, 0, 2949138, 8, 0, 2949139, 8, 0, 2949140, 4, 0, 2949141, 4, 0, 2949142, 4, 0, 2949143, 4, 0, 2949144, 4, 0, 2949145, 4, 0, 2949146, 4, 0, 2949147, 4, 0, 2949148, 4, 0, 2949149, 4, 0, 2949150, 4, 0, 2949151, 4, 0, 2949152, 4, 0, 2949153, 4, 0, 2949154, 4, 0, 2949155, 4, 0, 2949156, 4, 0, 2949157, 4, 0, 2949158, 4, 0, 2949159, 4, 0, 2949160, 4, 0, 2949161, 8, 0, 2949162, 8, 0, 2949163, 8, 0, 2949164, 8, 0, 3014675, 8, 0, 3014676, 8, 0, 3014677, 8, 0, 3014678, 8, 0, 3014679, 8, 0, 3014680, 4, 0, 3014681, 4, 0, 3014682, 4, 0, 3014683, 4, 0, 3014684, 4, 0, 3014685, 4, 0, 3014686, 4, 0, 3014687, 4, 0, 3014688, 4, 0, 3014689, 4, 0, 3014690, 4, 0, 3014691, 4, 0, 3014692, 8, 0, 3014693, 8, 0, 3014694, 8, 0, 3014695, 8, 0, 3014696, 8, 0, 3080215, 8, 0, 3080216, 8, 0, 3080217, 8, 0, 3080218, 8, 0, 3080219, 8, 0, 3080220, 8, 0, 3080221, 8, 0, 3080222, 8, 0, 3080223, 8, 0, 3080224, 8, 0, 3080225, 8, 0, 3080226, 8, 0, 3080227, 8, 0, 3080228, 8, 0 )

[node name="Entities" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Entities"]
position = Vector2( 1877.99, 2084.98 )
scale = Vector2( 10.1925, 9.89721 )
texture = ExtResource( 2 )
color = Color( 0.611765, 0.0745098, 0.0745098, 1 )
energy = 0.85
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Entrance" type="Node2D" parent="Entities"]
visible = false
position = Vector2( 1176.88, 1317.61 )
scale = Vector2( -2.49359, 1.25993 )

[node name="HealingItemHoard" type="Sprite" parent="Entities"]
position = Vector2( 2246.32, 1707.11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Entities/HealingItemHoard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/HealingItemHoard/Area2D"]
position = Vector2( -58.8627, 0 )
shape = SubResource( 2 )

[node name="dragon_hoard" type="Sprite" parent="Entities"]
position = Vector2( 2064.32, 1791.11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard3" type="Sprite" parent="Entities"]
position = Vector2( 2356.32, 1787.11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="Entities/dragon_hoard3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Entities/dragon_hoard3/StaticBody2D"]
position = Vector2( 0, -6.67087 )
scale = Vector2( 1, 1.12931 )
polygon = PoolVector2Array( -41.9144, -38.0782, -85.1223, -5.57324, -85.1223, 14.2469, -62.5273, 25.3461, -10.5986, 30.8958, 38.1589, 30.4993, 68.2854, 27.3281, 72.2495, 13.454, 66.6998, -13.5013, 62.3394, -26.9789, 25.0776, -34.5106 )

[node name="dragon_hoard4" type="Sprite" parent="Entities"]
position = Vector2( 2562.32, 1863.11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard5" type="Sprite" parent="Entities"]
position = Vector2( 2831.41, 2549.28 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard12" type="Sprite" parent="Entities"]
position = Vector2( 2905.41, 2347.46 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard13" type="Sprite" parent="Entities"]
position = Vector2( 2848.23, 2663.64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard14" type="Sprite" parent="Entities"]
position = Vector2( 2844.87, 2660.27 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard15" type="Sprite" parent="Entities"]
position = Vector2( 2703.59, 2757.82 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard16" type="Sprite" parent="Entities"]
position = Vector2( 2606.05, 2835.18 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard6" type="Sprite" parent="Entities"]
position = Vector2( 2787.69, 2145.65 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard7" type="Sprite" parent="Entities"]
position = Vector2( 2740.59, 2004.38 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard8" type="Sprite" parent="Entities"]
position = Vector2( 2824.68, 2064.92 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard9" type="Sprite" parent="Entities"]
position = Vector2( 2871.77, 2243.19 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard10" type="Sprite" parent="Entities"]
position = Vector2( 2868.41, 2455.1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="dragon_hoard11" type="Sprite" parent="Entities"]
position = Vector2( 2868.41, 2455.1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="SomeOtherStuffHoard" type="Sprite" parent="Entities"]
position = Vector2( 2256.32, 1867.11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Entities/SomeOtherStuffHoard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/SomeOtherStuffHoard/Area2D"]
position = Vector2( -14.015, 14.0149 )
shape = SubResource( 3 )

[node name="FirkraagEnt" type="Sprite" parent="Entities"]
position = Vector2( 2195.21, 2392.26 )
scale = Vector2( 12, 12 )
texture = ExtResource( 4 )

[node name="FightStarter" type="Area2D" parent="Entities/FirkraagEnt"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/FirkraagEnt/FightStarter"]
position = Vector2( -9.16808, 17.8634 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Entities/FirkraagEnt"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Entities/FirkraagEnt/StaticBody2D"]
polygon = PoolVector2Array( -50.3007, 0.978806, -34.0434, -13.0361, -12.1801, -13.3164, 6.59996, -9.39226, 18.9331, -0.983276, 37.9934, 1.25911, 50.3266, -0.142395, 56.2128, -0.702988, 56.2128, 4.903, 46.4024, 7.14539, 31.5465, 10.2287, 37.7131, 13.5922, 34.3495, 19.7588, 25.38, 22.5618, 4.91817, 24.5239, -14.4225, 23.4027, -27.5965, 20.3194, -42.4523, 16.3952, -52.5431, 11.0696, -54.5052, 7.14539 )

[node name="FirkraagBossEnt" parent="Entities" instance=ExtResource( 8 )]
position = Vector2( 2790.12, 759.499 )

[node name="CameraZoomResizer" type="Area2D" parent="Entities"]
position = Vector2( 2020.91, 2422.65 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Entities/CameraZoomResizer"]
shape = SubResource( 4 )

[node name="CameraTweener" type="Tween" parent="Entities/CameraZoomResizer"]

[node name="LevelTransition" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 1080.42, 1182.67 )
scene_to_transition_to = "LevelDemo2"
landmark_node = "ExitToDemo2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/LevelTransition"]
shape = SubResource( 5 )

[node name="Cutscenes" type="AnimationPlayer" parent="."]

[node name="Props" type="Node2D" parent="."]

[node name="gore_pile" type="Sprite" parent="Props"]
position = Vector2( 1230.44, 1766.49 )
texture = ExtResource( 5 )

[node name="gore_pile3" type="Sprite" parent="Props"]
position = Vector2( 1426.71, 1928.3 )
texture = ExtResource( 5 )

[node name="gore_pile5" type="Sprite" parent="Props"]
position = Vector2( 1191.25, 1999.66 )
texture = ExtResource( 5 )

[node name="gore_pile4" type="Sprite" parent="Props"]
position = Vector2( 1548.08, 1851.89 )
texture = ExtResource( 5 )

[node name="gore_pile2" type="Sprite" parent="Props"]
position = Vector2( 1496.46, 1749.75 )
texture = ExtResource( 5 )

[node name="decorative_maybe_fungi" type="Sprite" parent="Props"]
position = Vector2( 1187.27, 1634.54 )
texture = ExtResource( 6 )
